[package]
name = "ctf-alien-cpu"
version = "0.1.0"
authors = [
    "Joel Höner <athre0z@zyantific.com>",
    "Nicolai Davidsson <nicolai.davidsson@rub.de>"
]
build = "build.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"

[dependencies.winapi]
git = "https://github.com/retep998/winapi-rs.git"
features = ["everything"]

[build-dependencies]
rand = "0.3"